embedded-bitmap-text-macros/tests/ui/font_data_duplicate_index_fail.stderr
error: duplicate index character 'B'; first seen in index "AB"
 --> tests/ui/font_data_duplicate_index_fail.rs:8:12
  |
8 |     index: "BA",
  |            ^^^^
