embedded-bitmap-text-macros/tests/ui/font_data_duplicate_index_fail.rs
use embedded_bitmap_text::{font_data, FontData};

const _FONT18: FontData<'static> = font_data! {
    size: 18,
    path: "../../.ref/Cubic_11.ttf",
    index: "AB",
    path: "../../.ref/Cubic_11.ttf",
    index: "BA",
};

fn main() {}
